<resources>
    <string name="app_name">来把锁2.0</string>

    <!-- Strings related to login -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="information">租借设备的乘客信息</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_email">姓名：</string>
    <string name="prompt_password">身份证：</string>
    <string name="prompt_name">乘客姓名:</string>
    <string name="prompt_area">乘客目的地:</string>
    <string name="prompt_coach">车厢号:</string>
    <string name="prompt_seat">座位号:</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sure">确定</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">姓名非法</string>
    <string name="error_invalid_password">身份证不符</string>
    <string name="error_incorrect_password">身份证不符</string>
    <string name="error_invalid_name">姓名格式不符</string>
    <string name="error_invalid_area">目的地格式不符合</string>
    <string name="error_invalid_coach">车厢格式不符</string>
    <string name="error_invalid_seat">座位格式不符</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="degrees_prompt">选择乘客车厢号：</string>
</resources>
